java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/publicClassInRightFile/x/Y.java
package x;
<error descr="Class 'DD' is public, should be declared in a file named 'DD.java'">public class DD</error> {}
